--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-            <!-- for this simple app launchMode=singleTask and singleTop have same effect.
-                 If you would start another activity in the app, e.g. Android Settings
-                 then you should use singleTask, else a new MainActivity would be started
-                 when the settings activity is currently shown -->
+        <!-- for this simple app launchMode=singleTask and singleTop have same effect.
+             If you would start another activity in the app, e.g. Android Settings
+             then you should use singleTask, else a new MainActivity would be started
+             when the settings activity is currently shown -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:exported="true"
             android:launchMode="singleTask"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
@@ -27,6 +27,7 @@
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
             </intent-filter>
+
             <meta-data
                 android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
                 android:resource="@xml/usb_device_filter" />
